--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
             <h2 class="section-title">Featured Image</h2>
             <div class="image-container">
                 <img src="https://i.pinimg.com/736x/73/b8/42/73b8422ea268ec2d1633d1c6bb2e42d5.jpg" 
-                     alt="Man working at computer" 
+                     alt="CAT" 
                      class="featured-image">
                 <p class="image-caption">A productive workspace example</p>
             </div>
