--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,7 @@
                 <img src="https://i.pinimg.com/736x/73/b8/42/73b8422ea268ec2d1633d1c6bb2e42d5.jpg" 
                      alt="CAT" 
                      class="featured-image">
-                <p class="image-caption">A productive workspace example</p>
+                <p class="image-caption">A picture of a cat</p>
             </div>
         </section>
 
