--- a/index2.html
+++ b/index2.html
@@ -35,7 +35,7 @@
 
         <section id="contact" class="highlight-box">
             <h2>Contact Us</h2>
-            <p>Email us at: <a href="mailto:info@example.com">info@example.com</a></p>
+            <p>Email us at: <a href="mailto:info@example.com">info@gmail.com</a></p>
         </section>
     </main>
 
